k8s/spring_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deploy
  labels:
    app: spring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: nadakhater/spring-app:lts
        ports:
        - containerPort: 8080
