k8s/spring_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /live
        pathType: Prefix
        backend:
          service:
            name: spring-app-service
            port:
              number: 80
